--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           src="assets/video/Tillmann_-_AUGE_ft_Caio_Luccas_Prod__yungdrum - 10Convert.com.mp4.mp4"
         ></video>
         <div id="controller" class="controller">
-          <img
+          <div class="controllers">
+            <img
             onclick="StartPlayer()"
             class="bttn"
             src="assets/img/play.png"
@@ -48,6 +49,10 @@
             value="10"
             step="5"
           />
+          </div>
+          <div class="hiddenControll">
+            <img src="./assets/img/arrow.png.png" alt="">
+          </div>
         </div>
       </div>
     </main>
