change class name from bttn to btn for buttons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div id="controller" class="controller">
           <div class="controllers">
-            <img id="playPause" class="bttn" src="assets/img/play-circle-regular-50.png" alt="Play">
-            <img id="fastForward" class="bttn" src="assets/img/fast-forward-circle-regular-48.png" alt="Fast Forward">
-            <img id="volumeVideo" onclick="mute()" class="bttn" src="assets/img/volume-full-regular-50.png" alt="Volume">
+            <img id="playPause" class="btn" src="assets/img/play-cirle-regular-50.png" alt="Play">
+            <img id="fastForward" class="btn" src="assets/img/fast-forward-circle-regular-48.png" alt="Fast Forward">
+            <img id="volumeVideo" onclick="mute()" class="btn" src="assets/img/volume-full-regular-50.png" alt="Volume">
           </div>
           <div class="progress">
             <span id="timeLive">00:00</span>
